chore: remove built design tokens from git

--- a/packages/tokens/src/Colors.mdx
+++ b/packages/tokens/src/Colors.mdx
@@ -1,5 +1,5 @@
-import { Meta, ColorPalette, ColorItem, Title } from "@storybook/blocks";
-import { ref } from "./lib/tokens.nested.json";
+import { Meta, ColorPalette, ColorItem, Title } from '@storybook/blocks';
+import { ref } from './lib/tokens.nested.json';
 
 <Meta title="Primitives/Colors" />
 
@@ -10,81 +10,51 @@ import { ref } from "./lib/tokens.nested.json";
     title="Base Colors"
     colors={{ White: ref.colors.white, Black: ref.colors.black }}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Gray"
     subtitle="Grays for all your daily needs"
     colors={ref.colors.gray}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Red"
     subtitle="Reds for all your daily needs"
     colors={ref.colors.red}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Orange"
     subtitle="Oranges for all your daily needs"
     colors={ref.colors.orange}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Yellow"
     subtitle="Yellows for all your daily needs"
     colors={ref.colors.yellow}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Green"
     subtitle="Greens for all your daily needs"
     colors={ref.colors.green}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Teal"
     subtitle="Teals for all your daily needs"
     colors={ref.colors.teal}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Blue"
     subtitle="Blues for all your daily needs"
     colors={ref.colors.blue}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Indigo"
     subtitle="Indigos for all your daily needs"
     colors={ref.colors.indigo}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Purple"
     subtitle="Purples for all your daily needs"
     colors={ref.colors.purple}
   />
-</ColorPalette>
-
-<ColorPalette>
   <ColorItem
     title="Pink"
     subtitle="Pinks for all your daily needs"
